--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -1,81 +1,41 @@
+import:
+  - dracula.yml
+
 # Window Customization
 window:
   opacity: .85
-  dimensions:
-    columns: 140
-    lines: 38
   padding:
     x: 15
     y: 15
-  decorations: full #Still won't show in a window manger, but will in a desktop environment
+  decorations: none
 scrolling:
   history: 10000
   multiplier: 3
-window.dynamic_title: true
 
 # Font Customization
 font:
   normal:
-    family: JetBrainsMono Nerd Font Mono
+    family: JetBrainsMono Nerd Font
     style: Regular
   bold:
-    family: JetBrainsMono Nerd Font Mono
+    family: JetBrainsMono Nerd Font
     style: Bold
   italic:
-    family: JetBrainsMono Nerd Font Mono
+    family: JetBrainsMono Nerd Font
     style: Italic
-  size: 7 
+  size: 12 
   offset:
     x: 0
     y: 0
   glyph_offset:
     x: 0
     y: 0
-  use_thin_strokes: false
+  use_thin_strokes: true
   debug:
     persistent_logging: false
-draw_bold_text_with_bright_colors: true
+draw_bold_text_with_bright_colors: false
 
-colors:
-  cursor:
-    text: CellBackground
-    cursor: CellForeground
-# Hepburn
-  primary:
-    background: '0x000000'
-    foreground: '0xfbf1c7'
-  normal:
-    black:   '0x282828'
-    red:     '0xcc241d'
-    green:   '0x98971a'
-    yellow:  '0xd79921'
-    blue:    '0x458588'
-    magenta: '0xb16286'
-    cyan:    '0x689d6a'
-    white:   '0xa89984'
-  bright:
-    black:   '0x928374'
-    red:     '0xfb4934'
-    green:   '0xb8bb26'
-    yellow:  '0xfabd2f'
-    blue:    '0x83a598'
-    magenta: '0xd3869b'
-    cyan:    '0x8ec07c'
-    white:   '0xebdbb2'
-
-  indexed_colors:
-    - { index: 16, color: '0xdc9656' }
-    - { index: 17, color: '0xa16946' }
-    - { index: 18, color: '0x282828' }
-    - { index: 19, color: '0x383838' }
-    - { index: 20, color: '0xb8b8b8' }
-    - { index: 21, color: '0xe8e8e8' }
-
-  selection:
-    text: '0xffffff'
-    background: '0xdc3232'
-    white:   '0xffffff'
-
+# Cursor
 cursor:
   style:
     shape: Beam
@@ -83,6 +43,7 @@ cursor:
     blink-interval: 750
     unfocused_hollow: true
 
+# Key Bindings
 key_bindings:
   - { key: N, mods: Control, action: SpawnNewInstance }
 #  - { key: V, mods: Control, action: Paste }
