updates for mac

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,110 +1,111 @@
-# remap prefix from 'C-b' to 'C-a'
-unbind C-b
-# set-option -g prefix C-a
-# bind-key C-a send-prefix
-set -g prefix C-Space
+# set the terminals
+set-option -g default-terminal "screen-256color"
+set-option -sa terminal-overrides ',xterm-256color:RGB'
 
-# Start index of window/pane with 1, because we're humans, not computers
+# set default shell by OS
+# if-shell "uname | grep -q Darwin" "set -g default-shell /opt/homebrew/bin/zsh"
+# if-shell "uname | grep -q Linux" "set -g default-shell /home/linuxbrew/.linuxbrew/bin/zsh"
+
+# very large history
+set -g history-limit 1000000
+
+# base settings
+set -g focus-events on
+set -g status-keys vi
+set -gs escape-time 0 # TODO investigate `-s` flag
+
+# window settings
+setw -g clock-mode-style 12
+setw -g mode-keys vi
+
+# enable clipboard (OSC 52)
+set -g set-clipboard on
+
+# start windows and pane numbering with index 1 instead of 0
 set -g base-index 1
 setw -g pane-base-index 1
 
-set -g status-interval 5
+# re-number windows when one is closed
+set -g renumber-windows on
 
-# Update files on focus (using for vim)
-set -g focus-events on
+# remove confirm step when killing a window or pane
+bind-key & kill-window
+bind-key x kill-pane
 
-# https://rsapkf.xyz/blog/enabling-italics-vim-tmux
-set -g default-terminal "tmux"
-# set-option -g terminal-overrides "screen-256color"
+# begin selection with `v` (vi-like)
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
 
-# set -g default-terminal "screen-256color"
-# tell Tmux that outside terminal supports true color
-set -ga terminal-overrides "xterm-256color"
+# Window related bindings
+# Open a new pane or window with the current directory of the current pane,
+# not the directory in which the first tmux session was started.
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
-# improve colors
-# set -g default-terminal "screen-256color"
-# tell Tmux that outside terminal supports true color
-# set -sa terminal-overrides ',xterm-256color:RGB'
+# Keyboard shortcut bindings
+bind C-b last-window
+bind C-h resize-pane -L 5
+bind C-j resize-pane -D 5
+bind C-k resize-pane -U 5
+bind C-l resize-pane -R 5
+bind C-n next-window
+bind C-p previous-window
+bind g new-window -c "#{pane_current_path}" -n "lazygit" lazygit
+bind K new-window -c "#{pane_current_path}" -n "lazydocker" lazydocker
+bind S new-window -c "#{pane_current_path}" -n "spotify" spt
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+bind v new-window -c "#{pane_current_path}" nvim +Files
 
-bind-key -r f run-shell "tmux neww ~/bin/tmux-sessionizer"
+# Set title
+set -g set-titles on
+set -g set-titles-string "#T"
 
-# attempt to speed up tmux
-# set -g escape-time 10
-
-# split panes using | and -
-bind-key - split-window -v  -c '#{pane_current_path}'
-bind-key \\ split-window -h  -c '#{pane_current_path}'
-
-# Enable mouse mode (tmux 2.1 and above)
+# Mouse bindings
+bind-key -n MouseUp2Status kill-window -t= # Middle click on the window label to kill it
+bind-key -n DoubleClick1Status new-window # Double click on the window list to open a new window
 set -g mouse on
 
-# reload config file (change file location to your the tmux.conf you want to use)
-bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
-bind-key M split-window -h "vim ~/.tmux.conf"
+# copy-mode-vi bindings
+bind-key -T copy-mode-vi 'C-h' select-pane -L
+bind-key -T copy-mode-vi 'C-j' select-pane -D
+bind-key -T copy-mode-vi 'C-k' select-pane -U
+bind-key -T copy-mode-vi 'C-l' select-pane -R
+bind-key -T copy-mode-vi 'C-\' select-pane -l
 
-bind -n C-M-Left resize-pane -L 2
-bind -n C-M-Right resize-pane -R 2
-bind -n C-M-Down resize-pane -D 1
-bind -n C-M-Up resize-pane -U 1
+# Theme
+set -g status-style 'bg=default,fg=white' # transparent status bar
+set -g status-position top 
+set -g pane-active-border-style "fg=green,bg=default"
+set -g pane-border-style "fg=white,bg=default"
+set -g window-status-format "#[fg=brightblack,bg=default](#[fg=white,bg=default]#I #F #W#[fg=brightblack,bg=default])"
+set -g window-status-current-format "#[fg=brightblack,bg=default](#[fg=magenta,bold,bg=default]#I #F #W#[fg=brightblack,nobold,bg=default])"
 
-# Use vim keybindings in copy mode
-# set -g set-clipboard off
-# setw -g mode-keys vi
-# unbind [
-# bind Escape copy-mode
-# bind-key -T copy-mode-vi v send -X begin-selection
-# bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "pbcopy"
-# unbind -T copy-mode-vi Enter
-# bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel "pbcopy"
-# unbind -T copy-mode-vi Space
-# bind -T copy-mode-vi Space send -X jump-again
-# bind-key -T copy-mode-vi 0 send -X back-to-indentation
-# bind y run 'tmux save-buffer - | pbcopy '
-# bind C-y run 'tmux save-buffer - | pbcopy '
+set -g status-left-length 50
+set -g status-left "#[fg=cyan,bold,bg=default] #S " # session name
+if-shell "uname | grep -q Darwin" "set -ga status-left '#[fg=brightblack,nobold,bg=default]['"
+if-shell "uname | grep -q Darwin" "set -ga status-left '#(gitmux -cfg $HOME/.config/tmux/gitmux.conf)'"
+if-shell "uname | grep -q Darwin" "set -ga status-left '#[fg=brightblack,bg=default]] '"
 
-setw -g aggressive-resize on
+set -g status-right-length 100
 
-# Undercurl
-set -g default-terminal "${TERM}"
-set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
-set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
+if-shell "uname | grep -q Linux" "set -g status-right '#[fg=cyan,bold,bg=default]%l:%M %a, %b %d '"
+if-shell "uname | grep -q Linux" "set -ga status-right '#[fg=black,bold,bg=cyan]  '"
 
-# set -g status-interval 1
-# set -g status-justify centre # center align window list
-# set -g status-style fg=white,bg=#464646
-# set -g status-left '#[fg=white] • #[fg=#f1fa8c]Terminal Tips #[fg=white]• #[fg=#50fa7b,bg=default,bright]@elijahmanor '
-# set -g status-left-length 40
-# set -g window-status-current-format "#[fg=#464646]#[bg=#aa7cff]#[fg=#292929]#[bg=#aa7cff] #I #W #[fg=#aa7cff]#[bg=#464646]"
-# set -g window-status-format "#[fg=#292929]#[bg=#464646]#I #W #[fg=#464646] "
-# set -g status-right '#[fg=#50fa7b,bg=default,bright]Time '
-# set -g status-right-length 140
+if-shell "uname | grep -q Darwin" "set -g status-right '#[fg=white,bold,bg=default]%l:%M %a, %b %d '"
+if-shell "uname | grep -q Darwin" "set -ga status-right '#[fg=black,bold,bg=white]  '"
 
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'casonadams/tmux-vi-navigation'
+# Plugins configurations
+set -g @emulate-scroll-for-no-mouse-alternate-buffer 'on'
+
+# Plugins
+set -g @plugin 'carlocab/tmux-nvr'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'wfxr/tmux-fzf-url' # prefix + u
-set -g @plugin 'dracula/tmux'
-# set -g @plugin 'robhurring/tmux-spotify'
+set -g @plugin 'nhdaly/tmux-better-mouse-mode'
+set -g @plugin 'tmux-plugins/tmux-urlview'
+set -g @plugin 'tmux-plugins/tpm'
 
-# set -g status-right "♫ #{music_status} #{artist}: #{track} | %a %h-%d %H:%M "
-
-# prefix + I (install)
-# prefix + U (update)
-# prefix + alt + u (uninstall)
-
-
-# available plugins: battery, cpu-usage, gpu-usage, ram-usage, network, network-bandwith, weather, time
-# set -g @dracula-plugins "battery cpu-usage ram-usage network time"
-set -g @dracula-plugins "git cpu-usage ram-usage time"
-# set -g @dracula-plugins " "
-# available colors: white, gray, dark_gray, light_purple, dark_purple, cyan, green, orange, red, pink, yellow
-set -g @dracula-border-contrast true
-set -g @dracula-show-flags true
-set -g @dracula-show-powerline true
-# it can accept `session`, `smiley`, `window`, or any character.
-set -g @dracula-show-left-icon session
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# Plugins Initialization (end of file)
 run '~/.tmux/plugins/tpm/tpm'
