font in kitty config

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,12 +1,12 @@
 include dracula.conf
 
-font_family      JetBrainsMono Nerd Font Mono Regular
-bold_font        JetBrainsMono Nerd Font Mono Bold
-italic_font      JetBrainsMono Nerd Font Mono Italic
-bold_italic_font JetBrainsMono Nerd Font Mono Bold Italic
+font_family      JetBrains Mono Regular Nerd Font Complete Mono
+bold_font        JetBrains Mono Bold Nerd Font Complete Mono
+italic_font      JetBrains Mono Italic Nerd Font Complete Mono
+bold_italic_font JetBrains Mono Bold Italic Nerd Font Complete Mono
 
 font_size 10.0
-disable_ligatures never
+disable_ligatures cursor
 
 cursor #cccccc
 cursor_text_color background
@@ -22,3 +22,4 @@ macos_option_as_alt yes
 map ctrl+plus            change_font_size all +2.0
 map cmd+minus           change_font_size all -2.0
 map cmd+0               change_font_size all 0
+
