kitty added key maps

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -17,9 +17,19 @@ term xterm-kitty
 window_border_width 0
 
 window_padding_width 10.0
-background_opacity 0.9
+background_opacity 0.8
 macos_option_as_alt yes
+
+
+# increase/decrease font size
 map ctrl+plus            change_font_size all +2.0
 map cmd+minus           change_font_size all -2.0
 map cmd+0               change_font_size all 0
 
+# copy paste shortcuts
+copy_on_select yes
+map ctrl+c       copy_to_clipboard
+map cmd+c        copy_to_clipboard
+map ctrl+v       paste_from_clipboard
+map cmd+v        paste_from_clipboard
+map shift+insert paste_from_clipboard
