--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -24,7 +24,7 @@ font:
   italic:
     family: JetBrainsMono Nerd Font
     style: Italic
-  size: 8
+  size: 15
   offset:
     x: 0
     y: 0
@@ -47,8 +47,6 @@ cursor:
 # Key Bindings
 key_bindings:
   - { key: N, mods: Control, action: SpawnNewInstance }
-  - { key: V, mods: Control, action: Paste }
-  - { key: C, mods: Control, action: Copy }
 
   # TMUX key bindings
   # Rename the current tmux window
@@ -88,3 +86,4 @@ key_bindings:
   - { key: W, mods: Command, chars: "\x02\x78" }
   # Toggle the zoom state of the current tmux pane
   - { key: Z, mods: Command, chars: "\x02\x7a" }
+  - { key: J, mods: Command, chars: "\x02\x54" }
