--- a/tmux/.config/tmux/tmux_bak.conf
+++ b/tmux/.config/tmux/tmux_bak.conf
@@ -1,17 +1,32 @@
-set-option -g detach-on-destroy off
+# set the terminals
 set-option -g default-terminal "screen-256color"
 set-option -sa terminal-overrides ',xterm-256color:RGB'
 
+# set default shell by OS
+# if-shell "uname | grep -q Darwin" "set -g default-shell /opt/homebrew/bin/zsh"
+# if-shell "uname | grep -q Linux" "set -g default-shell /home/linuxbrew/.linuxbrew/bin/zsh"
+
+# very large history
+set -g history-limit 1000000
+
 # base settings
-set -g base-index 1 
-setw -g pane-base-index 1
-set -g clock-mode-style 12
 set -g focus-events on
-set -g history-limit 1000000 # very large history
-set -g renumber-windows on
-set -g set-clipboard on
 set -g status-keys vi
-set -gs escape-time 0 # TODO: investigate `-s` flag
+set -gs escape-time 0 # TODO investigate `-s` flag
+
+# window settings
+setw -g clock-mode-style 12
+setw -g mode-keys vi
+
+# enable clipboard (OSC 52)
+set -g set-clipboard on
+
+# start windows and pane numbering with index 1 instead of 0
+set -g base-index 1
+setw -g pane-base-index 1
+
+# re-number windows when one is closed
+set -g renumber-windows on
 
 # remove confirm step when killing a window or pane
 bind-key & kill-window
@@ -37,16 +52,16 @@ bind C-n next-window
 bind C-p previous-window
 bind g new-window -c "#{pane_current_path}" -n "lazygit" lazygit
 bind K new-window -c "#{pane_current_path}" -n "lazydocker" lazydocker
+bind S new-window -c "#{pane_current_path}" -n "spotify" spt
 bind h select-pane -L
 bind j select-pane -D
-bind T display-popup -E "tt"
 bind k select-pane -U
 bind l select-pane -R
 bind v new-window -c "#{pane_current_path}" nvim +Files
 
 # Set title
-# set -g set-titles on
-# set -g set-titles-string "#T"
+set -g set-titles on
+set -g set-titles-string "#T"
 
 # Mouse bindings
 bind-key -n MouseUp2Status kill-window -t= # Middle click on the window label to kill it
@@ -63,46 +78,34 @@ bind-key -T copy-mode-vi 'C-\' select-pane -l
 # Theme
 set -g status-style 'bg=default,fg=white' # transparent status bar
 set -g status-position top 
-set -g pane-active-border-style "fg=white,bg=default"
-set -g pane-border-style "fg=brightblack,bg=default"
+set -g pane-active-border-style "fg=green,bg=default"
+set -g pane-border-style "fg=white,bg=default"
+set -g window-status-format "#[fg=brightblack,bg=default](#[fg=white,bg=default]#I #F #W#[fg=brightblack,bg=default])"
+set -g window-status-current-format "#[fg=brightblack,bg=default](#[fg=magenta,bold,bg=default]#I #F #W#[fg=brightblack,nobold,bg=default])"
 
-set -g status-left-length 70
-set -g status-left "#[fg=blue,bold]#S " # session name
-set -ga status-left "#[fg=white,bold]שׂ "
-set -ga status-left "#[fg=white,nobold]#(gitmux -timeout 300ms -cfg $HOME/.config/tmux/gitmux.conf) "
+set -g status-left-length 50
+set -g status-left "#[fg=cyan,bold,bg=default] #S " # session name
+if-shell "uname | grep -q Darwin" "set -ga status-left '#[fg=brightblack,nobold,bg=default]['"
+if-shell "uname | grep -q Darwin" "set -ga status-left '#(gitmux -cfg $HOME/.config/tmux/gitmux.conf)'"
+if-shell "uname | grep -q Darwin" "set -ga status-left '#[fg=brightblack,bg=default]] '"
 
-set -g status-right-length 70
-set -g status-right "#{now_playing} "
-set -ga status-right '#[fg=white,bold,bg=default]%l:%M %a, %b %d'
+set -g status-right-length 100
 
-# [0 - command]
-set -g window-status-format "#[fg=brightblack,nobold,bge=default]["
-set -ga window-status-format "#[fg=brightblack,bg=default]#I #F "
-set -ga window-status-format "#[fg=white,bg=default]#W"
-set -ga window-status-format "#[fg=brightblack,nobold,bg=default]]"
+if-shell "uname | grep -q Linux" "set -g status-right '#[fg=cyan,bold,bg=default]%l:%M %a, %b %d '"
+if-shell "uname | grep -q Linux" "set -ga status-right '#[fg=black,bold,bg=cyan]  '"
 
-# [0 * command]
-set -g window-status-current-format "#[fg=brightblack,nobold,bg=default]["
-set -ga window-status-current-format "#[fg=brightblack,nobold,bg=default]#I "
-set -ga window-status-current-format "#[fg=magenta,nobold,bg=default]#F "
-set -ga window-status-current-format "#[fg=white,bold,bg=default]#W"
-set -ga window-status-current-format "#[fg=brightblack,nobold,bg=default]]"
+if-shell "uname | grep -q Darwin" "set -g status-right '#[fg=white,bold,bg=default]%l:%M %a, %b %d '"
+if-shell "uname | grep -q Darwin" "set -ga status-right '#[fg=black,bold,bg=white]  '"
 
 # Plugins configurations
 set -g @emulate-scroll-for-no-mouse-alternate-buffer 'on'
-set -g @fzf-url-fzf-options '-w 50% -h 50% --multi -0 --no-preview --reverse'
-set -g @fzf-url-history-limit '2000'
-set -g @now-playing-scrollable-threshold 60
-set -g @now-playing-status-format "#[fg=cyan,nobold]#[fg=blue] #[fg=white]{artist} #[fg=cyan]ﱘ #[fg=white]{title}"
 
 # Plugins
-# set -g @plugin 'carlocab/tmux-nvr'
+set -g @plugin 'carlocab/tmux-nvr'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'Morantron/tmux-fingers'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
+set -g @plugin 'tmux-plugins/tmux-urlview'
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'wfxr/tmux-fzf-url'
-set -g @plugin 'spywhere/tmux-now-playing'
 
 # Plugins Initialization (end of file)
 run '~/.tmux/plugins/tpm/tpm'
