--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -24,7 +24,7 @@ font:
   italic:
     family: JetBrainsMono Nerd Font
     style: Italic
-  size: 15
+  size: 13
   offset:
     x: 0
     y: 0
@@ -37,12 +37,12 @@ font:
 draw_bold_text_with_bright_colors: false
 
 # Cursor
-cursor:
-  style:
-    shape: Beam
-    blinking: off
-    blink-interval: 750
-    unfocused_hollow: true
+# cursor:
+#   style:
+#     shape: Beam
+#     blinking: off
+#     blink-interval: 750
+#     unfocused_hollow: true
 
 # Key Bindings
 key_bindings:
