--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -31,10 +31,13 @@ font:
   glyph_offset:
     x: 0
     y: 0
-  use_thin_strokes: true
+  # use_thin_strokes: true
   debug:
     persistent_logging: false
 draw_bold_text_with_bright_colors: false
+
+shell:
+  program: /opt/homebrew/bin/fish
 
 # Cursor
 # cursor:
