feat(nvim): new config

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,5 +1,6 @@
 set-option -g detach-on-destroy off
 set-option -g default-terminal "screen-256color"
+set-option -g default-shell "/opt/homebrew/bin/fish"
 set-option -sa terminal-overrides ',xterm-256color:RGB'
 
 # base settings
