--- a/yabai/.skhdrc
+++ b/yabai/.skhdrc
@@ -1,70 +1,151 @@
-# TODO https://github.com/koekeishiya/yabai/issues/725
+# opens iTerm2
+# alt - return : "${HOME}"/scripts/open_alacritty.sh
+alt - return : open /Applications/Alacritty.app
 
-# focus window
+# Show system statistics
+fn + lalt - 1 : ~/scripts/show_cpu.sh
+fn + lalt - 2 : ~/scripts/show_mem.sh
+fn + lalt - 3 : ~/scripts/show_bat.sh
+fn + lalt - 4 : ~/scripts/show_disk.sh
+
+# Navigation
 alt - h : yabai -m window --focus west
 alt - j : yabai -m window --focus south
 alt - k : yabai -m window --focus north
 alt - l : yabai -m window --focus east
 
-# swap managed window
-shift + alt - h : yabai -m window --swap west
-shift + alt - j : yabai -m window --swap south
-shift + alt - k : yabai -m window --swap north
-shift + alt - l : yabai -m window --swap east
+# Moving windows
+shift + alt - h : yabai -m window --warp west
+shift + alt - j : yabai -m window --warp south
+shift + alt - k : yabai -m window --warp north
+shift + alt - l : yabai -m window --warp east
 
-# move managed window
-shift + alt + ctrl - h : yabai -m window --warp west
-shift + alt + ctrl - j : yabai -m window --warp south
-shift + alt + ctrl - k : yabai -m window --warp north
-shift + alt + ctrl - l : yabai -m window --warp east
-
-# rotate tree
-alt - r : yabai -m space --rotate 90
-
-# toggle window fullscreen zoom
-alt - f : yabai -m window --toggle zoom-fullscreen
-
-# toggle padding and gap
-alt - g : yabai -m space --toggle padding; yabai -m space --toggle gap
-
-# float / unfloat window and center on screen
-alt - t : yabai -m window --toggle float;\
-          yabai -m window --grid 4:4:1:1:2:2
-
-# toggle window split type
-alt - e : yabai -m window --toggle split
-
-# balance size of windows
-shift + alt - 0 : yabai -m space --balance
-
-# move window and focus desktop
+# Move focus container to workspace
+shift + alt - m : yabai -m window --space last; yabai -m space --focus last
+shift + alt - p : yabai -m window --space prev; yabai -m space --focus prev
+shift + alt - n : yabai -m window --space next; yabai -m space --focus next
 shift + alt - 1 : yabai -m window --space 1; yabai -m space --focus 1
 shift + alt - 2 : yabai -m window --space 2; yabai -m space --focus 2
 shift + alt - 3 : yabai -m window --space 3; yabai -m space --focus 3
 shift + alt - 4 : yabai -m window --space 4; yabai -m space --focus 4
-shift + alt - 5 : yabai -m window --space 5; yabai -m space --focus 5
-shift + alt - 6 : yabai -m window --space 6; yabai -m space --focus 6
-shift + alt - 7 : yabai -m window --space 7; yabai -m space --focus 7
-shift + alt - 8 : yabai -m window --space 8; yabai -m space --focus 8
-shift + alt - 9 : yabai -m window --space 9; yabai -m space --focus 9
 
-# create desktop, move window and follow focus - uses jq for parsing json (brew install jq)
-shift + alt - n : yabai -m space --create && \
-                   index="$(yabai -m query --spaces --display | jq 'map(select(."native-fullscreen" == 0))[-1].index')" && \
-                   yabai -m window --space "${index}" && \
-                   yabai -m space --focus "${index}"
+# Resize windows
+lctrl + alt - h : yabai -m window --resize left:-50:0; \
+                  yabai -m window --resize right:-50:0
+lctrl + alt - j : yabai -m window --resize bottom:0:50; \
+                  yabai -m window --resize top:0:50
+lctrl + alt - k : yabai -m window --resize top:0:-50; \
+                  yabai -m window --resize bottom:0:-50
+lctrl + alt - l : yabai -m window --resize right:50:0; \
+                  yabai -m window --resize left:50:0
 
-# fast focus desktop
-alt - 0 : yabai -m space --focus recent
+# Equalize size of windows
+lctrl + alt - e : yabai -m space --balance
 
-# send window to monitor and follow focus
-shift + alt - n : yabai -m window --display next; yabai -m display --focus next
-shift + alt - p : yabai -m window --display previous; yabai -m display --focus previous
+# Enable / Disable gaps in current workspace
+lctrl + alt - g : yabai -m space --toggle padding; yabai -m space --toggle gap
 
-# increase window size
-shift + alt - w : yabai -m window --resize top:0:-20
-shift + alt - d : yabai -m window --resize left:-20:0
+# Rotate windows clockwise and anticlockwise
+alt - r         : yabai -m space --rotate 270
+shift + alt - r : yabai -m space --rotate 90
 
-# decrease window size
-shift + alt - s : yabai -m window --resize bottom:0:-20
-shift + alt - a : yabai -m window --resize top:0:20
+# Rotate on X and Y Axis
+shift + alt - x : yabai -m space --mirror x-axis
+shift + alt - y : yabai -m space --mirror y-axis
+
+# Set insertion point for focused container
+shift + lctrl + alt - h : yabai -m window --insert west
+shift + lctrl + alt - j : yabai -m window --insert south
+shift + lctrl + alt - k : yabai -m window --insert north
+shift + lctrl + alt - l : yabai -m window --insert east
+
+# Float / Unfloat window
+shift + alt - space : \
+    yabai -m window --toggle float; \
+    yabai -m window --toggle border
+
+# Restart Yabai
+shift + lctrl + alt - r : \
+    /usr/bin/env osascript <<< \
+        "display notification \"Restarting Yabai\" with title \"Yabai\""; \
+    launchctl kickstart -k "gui/${UID}/homebrew.mxcl.yabai"
+
+# Make window native fullscreen
+alt - f         : yabai -m window --toggle zoom-fullscreen
+shift + alt - f : yabai -m window --toggle native-fullscreen
+
+
+
+
+
+
+# # TODO https://github.com/koekeishiya/yabai/issues/725
+
+# # focus window
+# alt - h : yabai -m window --focus west
+# alt - j : yabai -m window --focus south
+# alt - k : yabai -m window --focus north
+# alt - l : yabai -m window --focus east
+
+# # swap managed window
+# shift + alt - h : yabai -m window --swap west
+# shift + alt - j : yabai -m window --swap south
+# shift + alt - k : yabai -m window --swap north
+# shift + alt - l : yabai -m window --swap east
+
+# # move managed window
+# shift + alt + ctrl - h : yabai -m window --warp west
+# shift + alt + ctrl - j : yabai -m window --warp south
+# shift + alt + ctrl - k : yabai -m window --warp north
+# shift + alt + ctrl - l : yabai -m window --warp east
+
+# # rotate tree
+# alt - r : yabai -m space --rotate 90
+
+# # toggle window fullscreen zoom
+# alt - f : yabai -m window --toggle zoom-fullscreen
+
+# # toggle padding and gap
+# alt - g : yabai -m space --toggle padding; yabai -m space --toggle gap
+
+# # float / unfloat window and center on screen
+# alt - t : yabai -m window --toggle float;\
+#           yabai -m window --grid 4:4:1:1:2:2
+
+# # toggle window split type
+# alt - e : yabai -m window --toggle split
+
+# # balance size of windows
+# shift + alt - 0 : yabai -m space --balance
+
+# # move window and focus desktop
+# shift + alt - 1 : yabai -m window --space 1; yabai -m space --focus 1
+# shift + alt - 2 : yabai -m window --space 2; yabai -m space --focus 2
+# shift + alt - 3 : yabai -m window --space 3; yabai -m space --focus 3
+# shift + alt - 4 : yabai -m window --space 4; yabai -m space --focus 4
+# shift + alt - 5 : yabai -m window --space 5; yabai -m space --focus 5
+# shift + alt - 6 : yabai -m window --space 6; yabai -m space --focus 6
+# shift + alt - 7 : yabai -m window --space 7; yabai -m space --focus 7
+# shift + alt - 8 : yabai -m window --space 8; yabai -m space --focus 8
+# shift + alt - 9 : yabai -m window --space 9; yabai -m space --focus 9
+
+# # create desktop, move window and follow focus - uses jq for parsing json (brew install jq)
+# shift + alt - n : yabai -m space --create && \
+#                    index="$(yabai -m query --spaces --display | jq 'map(select(."native-fullscreen" == 0))[-1].index')" && \
+#                    yabai -m window --space "${index}" && \
+#                    yabai -m space --focus "${index}"
+
+# # fast focus desktop
+# alt - 0 : yabai -m space --focus recent
+
+# # send window to monitor and follow focus
+# shift + alt - n : yabai -m window --display next; yabai -m display --focus next
+# shift + alt - p : yabai -m window --display previous; yabai -m display --focus previous
+
+# # increase window size
+# shift + alt - w : yabai -m window --resize top:0:-20
+# shift + alt - d : yabai -m window --resize left:-20:0
+
+# # decrease window size
+# shift + alt - s : yabai -m window --resize bottom:0:-20
+# shift + alt - a : yabai -m window --resize top:0:20
