--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -2,6 +2,8 @@ import:
   - ~/.config/alacritty/dracula.yml
   # - ~/.config/alacritty/tokyonight.yml
 
+live_config_reload: true
+
 # Window Customization
 window:
   opacity: .85
@@ -9,6 +11,7 @@ window:
     x: 15
     y: 15
   decorations: buttonless
+  dynamic_padding: false
 scrolling:
   history: 10000
   multiplier: 3
@@ -18,12 +21,12 @@ font:
   normal:
     family: JetBrainsMono Nerd Font
     style: Regular
-  bold:
-    family: JetBrainsMono Nerd Font
-    style: Bold
-  italic:
-    family: JetBrainsMono Nerd Font
-    style: Italic
+#   bold:
+#     family: JetBrainsMono Nerd Font
+#     style: Bold
+#   italic:
+#     family: JetBrainsMono Nerd Font
+#     style: Italic
   size: 13
   offset:
     x: 0
@@ -31,7 +34,6 @@ font:
   glyph_offset:
     x: 0
     y: 0
-  # use_thin_strokes: true
   debug:
     persistent_logging: false
 draw_bold_text_with_bright_colors: false
