--- a/tmux/.config/tmux/gitmux.conf
+++ b/tmux/.config/tmux/gitmux.conf
@@ -1,3 +1,13 @@
+#
+#  ██████╗ ██╗████████╗███╗   ███╗██╗   ██╗██╗  ██╗
+# ██╔════╝ ██║╚══██╔══╝████╗ ████║██║   ██║╚██╗██╔╝
+# ██║  ███╗██║   ██║   ██╔████╔██║██║   ██║ ╚███╔╝ 
+# ██║   ██║██║   ██║   ██║╚██╔╝██║██║   ██║ ██╔██╗ 
+# ╚██████╔╝██║   ██║   ██║ ╚═╝ ██║╚██████╔╝██╔╝ ██╗
+#  ╚═════╝ ╚═╝   ╚═╝   ╚═╝     ╚═╝ ╚═════╝ ╚═╝  ╚═╝
+# Git in your tmux status bar
+# https://github.com/arl/gitmux
+
 tmux:
   symbols:
     branch: ''
