--- a/yabai/.yabairc
+++ b/yabai/.yabairc
@@ -13,9 +13,9 @@ gaps["left"]="15"
 gaps["right"]="15"
 gaps["inner"]="15"
 
-color["focused"]="0xE0808080"
-color["normal"]="0x00010101"
-color["preselect"]="0xE02d74da"
+color["focused"]="0xffe1e3e4"
+color["normal"]="0xff2a2f38"
+color["preselect"]="0xff9dd274"
 
 # Uncomment to refresh ubersicht widget on workspace change
 # Make sure to replace WIDGET NAME for the name of the ubersicht widget
@@ -62,19 +62,14 @@ yabai -m config mouse_action2               resize
 
 # ===== Rules ==================================
 
+# Exclude problematic apps from being managed:
+yabai -m rule --add app="^(Transparent Note|LuLu|Homerow|Numi|Calculator|Software Update|Dictionary|VLC|System Preferences|System Settings|Photo Booth|Archive Utility|Python|LibreOffice|App Store|Steam|Alfred|Activity Monitor)$" manage=off
 yabai -m rule --add label="Finder" app="^Finder$" title="(Co(py|nnect)|Move|Info|Pref)" manage=off
 yabai -m rule --add label="Safari" app="^Safari$" title="^(General|(Tab|Password|Website|Extension)s|AutoFill|Se(arch|curity)|Privacy|Advance)$" manage=off
-# yabai -m rule --add label="macfeh" app="^macfeh$" manage=off
-yabai -m rule --add label="System Preferences" app="^System Preferences$" title=".*" manage=off
-yabai -m rule --add label="App Store" app="^App Store$" manage=off
-yabai -m rule --add label="Activity Monitor" app="^Activity Monitor$" manage=off
-# yabai -m rule --add label="KeePassXC" app="^KeePassXC$" manage=off
-yabai -m rule --add label="Calculator" app="^Calculator$" manage=off
-yabai -m rule --add label="Numi" app="^Numi$" manage=off
-yabai -m rule --add label="Dictionary" app="^Dictionary$" manage=off
-# yabai -m rule --add label="mpv" app="^mpv$" manage=off
-yabai -m rule --add label="Software Update" title="Software Update" manage=off
 yabai -m rule --add label="About This Mac" app="System Information" title="About This Mac" manage=off
+yabai -m rule --add app="^CapCut$" manage=off
+yabai -m rule --add app="^Alfred Preferences$" manage=off
+yabai -m rule --add app="^Fig$" manage=off
 
 # ===== Signals ================================
 
@@ -131,6 +126,5 @@ printf "yabai: configuration loaded...\\n"
 # yabai -m rule --add app="^balenaEtcher$" manage=off
 # yabai -m rule --add app="^Creative Cloud$" manage=off
 # yabai -m rule --add app="^Logi Options$" manage=off
-# yabai -m rule --add app="^Alfred Preferences$" manage=off
 
 # echo "yabai configuration loaded.."
